@@ -15,6 +15,8 @@ Bug Handling
 
 * use FindProcess instead of syscall.Kill to make the 'pid_file' configuration setting work on Windows (issue #807)
 
+* Fix the SandboxFilter ReportMsg panic on termination/shutdown (issue #816)
+
 Features
 --------
 
